--- a/Trust Based Recommendation-checkpoint.ipynb
+++ b/Trust Based Recommendation-checkpoint.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "b31cfe15-ae4c-4dd1-baf9-c13ca201e730",
    "metadata": {},
    "outputs": [],
@@ -226,8 +226,19 @@
     "    start_time=time.time()\n",
     "    user_item_df = create_user_item_df(df)\n",
     "    user_item_matrix = user_item_df.to_numpy()\n",
-    "    similarity_dict =calculate_similarity(user_item_matrix)"
+    "    similarity_dict =calculate_similarity(user_item_matrix)\n",
+    "    confidence_dict = calculate_confidence(user_item_matrix, similarity_dict)\n",
+    "    identical_opinion_dict = calculate_identical_opinion(user_item_matrix, similarity_dict, confidence_dict)\n",
+    "    incipient_trust_dict = generate_incipient_trust(similarity_dict, confidence_dict, identical_opinion_dict)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2893348-d96b-40ae-b83a-cf782dfb4422",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
