--- a/Trust Based Recommendation-checkpoint.ipynb
+++ b/Trust Based Recommendation-checkpoint.ipynb
@@ -140,6 +140,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "91e9eeb1-486f-4fb2-b292-b5194dd4796a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_incipient_trust(similarity_dict, confidence_dict, identical_opinion_dict):\n",
+    "    def calculate_direct_trust(similarity_dict, confidence_dict, identical_opinion_dict):\n",
+    "        similarity, sim_threhsold = similarity_dict['similarity'], similarity_dict['threshold']\n",
+    "        confidence, conf_threshold = confidence_dict['confidence'], confidence_dict['threshold']\n",
+    "        opinion, opin_threshold=identical_opinion_dict['opinion'], identical_opinion_dict['threshold']\n",
+    "\n",
+    "        direct_trust = np.zeros_like(similarity)\n",
+    "        num_rows, num_cols = similarity.shape\n",
+    "\n",
+    "        for i in range(num_rows):\n",
+    "            for j in range(num_cols):\n",
+    "                sim_val= similarity[i,j]\n",
+    "                conf_val = confidence[i,j]\n",
+    "                opinion_val= opinion[i,j]\n",
+    "                s_val=sim_threhsold[i]\n",
+    "                c_val=conf_threshold[i]\n",
+    "                o_val=opin_threshold[i]\n",
+    "\n",
+    "                if sim_val>= s_val:\n",
+    "                    if conf_val>= c_val:\n",
+    "                        if opinion_val >=o_val:\n",
+    "                            denominator= sim_val + conf_val+opinion_val\n",
+    "                            direct_trust[i,j]= (3*(sim_val*conf_val*opinion_val))/denominator\n",
+    "                        else:\n",
+    "                            denominator= sim_val + conf_val\n",
+    "                            direct_trust[i,j]=(2*(sim_val*conf_val))/denominator\n",
+    "                    else:\n",
+    "                        if opinion_val>=o_val:\n",
+    "                            denominator = sim_val+opinion_val\n",
+    "                            direct_trust[i,j]=(2*(sim_val*opinion_val))/denominator\n",
+    "                else:\n",
+    "                    if conf_val>=c_val:\n",
+    "                        if opinion_val<=o_val:\n",
+    "                            denominator = conf_val+opinion_val\n",
+    "                            direct_trust[i,j]=(2*(conf_val*opinion_val))/denominator\n",
+    "        positive_counts_per_row = np.sum(direct_trust>0, axis=0)\n",
+    "        dt_threshold= np.sum(direct_trust,axis=0)/np.maximum(positive_counts_per_row,1)\n",
+    "        return direct_trust, dt_threshold\n",
+    "    @nb.njit\n",
+    "    def propagate_direct_trust(direct_trust, dt_threshold):\n",
+    "        num_users=direct_trust.shape[0]\n",
+    "        propagated_trust = np.zeros((num_users,num_users))\n",
+    "        for i in range(num_users):\n",
+    "            for j in range(num_users):\n",
+    "                if i!=j:\n",
+    "                    \n",
+    "                            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69c42d55-7c26-4818-bc07-5a3ab72386ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "411fccb7-60ea-4e14-a266-524e92e33e42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8d08fa4-e1d2-4bd0-a1ac-eda1d7d86d2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fed8d00-39ed-4577-a983-af3ffb129b6d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "71c962ad-bd6e-4962-af4f-e4afb1be33d9",
    "metadata": {},
