--- a/Trust Based Recommendation-checkpoint.ipynb
+++ b/Trust Based Recommendation-checkpoint.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numba as nb"
+    "import numba as nb\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -19,33 +21,40 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e3abe65-3e69-4183-b9d7-688ebad7e84b",
+   "cell_type": "markdown",
+   "id": "5ab89dcb-2d7a-465c-ac16-7eed2ec9b0a7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Calculate Similarity"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "0a2d7e57-c33e-4256-a56c-ded2ded9853b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def calculate_similarity(user_item_matrix):\n",
     "    def precompute_metrics(user_item_matrix):\n",
-    "        PCC_matrix = no.corrcoef(user_item_matrix)\n",
-    "        Distance_matrix = calculate_distance(user_item_matrix)\n",
-    "        return PCC_matrix, Distance_matrix\n",
-    "    numerator = 2* PCC_matrix * Distance_matrix\n",
-    "    denominator= PCC_matrix + Distance_matrix\n",
-    "\n",
-    "    similarity_matrix = np.where(PCC_matrix > 0, numerator/denominator ,0)\n",
-    "    positive_count_similarity = np.count_nonzero(similarity_matrix, 0)\n",
-    "    sim_threshold = np.sum(similarity_matrix, axis=0)/positive_count_similarity\n",
-    "    similarity_dict = {'similarity':similarity_matrix , 'threshold': sim_threshold}\n",
+    "        PCC = no.corrcoef(user_item_matrix)\n",
+    "        DistanceMatrix = calculate_distance(user_item_matrix)\n",
+    "        return PCC, DistanceMatrix\n",
+    "    numerator = 2* PCC * DistanceMatrix\n",
+    "    denominator= PCC + DistanceMatrix\n",
+    "    SimilarityMatrix = np.where(PCC > 0, numerator/denominator ,0)\n",
+    "    PositiveCountSimilarity = np.count_nonzero(similaritymatrix, 0)\n",
+    "    simthreshold = np.sum(SimilarityMatrix, axis=0)/PositiveCountSimilarity\n",
+    "    similarity_dict = {'similarity':similarity_matrix , 'threshold': simthreshold}\n",
     "    return similarity_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f457aec-1789-4d00-ace7-ecea116ca609",
+   "metadata": {},
+   "source": [
+    "## Calculate Confidence"
    ]
   },
   {
@@ -88,6 +97,14 @@
     "\n",
     "    confidence_dict= {'confidence': confidence_matrix , 'threshold': conf_threshold}\n",
     "    return confidence_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36115b9b-ed34-4292-86f5-ae1564be2cdc",
+   "metadata": {},
+   "source": [
+    "## Calculate Identical Opinion"
    ]
   },
   {
@@ -136,6 +153,14 @@
     "    identical_opinion_dict={'opinion': identical_opinion, 'threshold': identopinion_threshold}\n",
     "\n",
     "    return identical_opinion_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b798c54d-951b-4a70-a41c-53dff38f3b8f",
+   "metadata": {},
+   "source": [
+    "## Generate Incipient Trust"
    ]
   },
   {
@@ -190,41 +215,44 @@
     "        for i in range(num_users):\n",
     "            for j in range(num_users):\n",
     "                if i!=j:\n",
+    "                    dt_i_u = direct_trust[i,:]\n",
+    "                    dt_u_j = direct_trust[:,j]\n",
+    "                    threshold_i= dt_threshold[i]\n",
+    "                    threshold_j = dt_treshold[j]\n",
+    "\n",
+    "                    co_trust_sum=0\n",
+    "                    co_trust_count = 0\n",
+    "\n",
+    "\n",
+    "        def calculate_incipient_trust(direct_trust, propagated_trust):\n",
+    "            non_zero_direct = direct_trust>0\n",
+    "            non_zero_propgated= propagated_trust>0\n",
+    "\n",
+    "            numerator= np.where(non_zero_direct & non_zero_propagated,direct_trust*propagated_trust,0)\n",
+    "\n",
+    "            denominator = direct_trust + propagated_trust\n",
+    "            nonzero_denominator = denominator >0\n",
+    "\n",
+    "            intrust= np.where(nonzero_denominator, np.divide(numerator, denominator, out=np.zeros_like(denominator), where=nonzero_denominator),\n",
+    "                             np.where(non_zero_direct, propagated_trust, np.where(non_zero_propagated, direct_trust,0)))\n",
+    "            return np.sqrt(intrust)\n",
+    "\n",
+    "        NumberUser = len(user_ids)\n",
+    "\n",
+    "\n",
+    "        direct_trust, dt_threshold= calculate_direct_trust(similarity_dict, confidence_dict, identical_opinion_dict)\n",
+    "        propagated_trust=propagate_direct_trust(direct_trust, dt_threshold)\n",
+    "        incipient_trust = calculate_incipient_trust(direct_trust, propagated_trust)\n",
+    "        inctrust_trust_dict = incipient_trust >= inctrust_threshold\n",
+    "        incipient_trust_dict = {'trust': incipient_trust, 'threshold': inctrust_threshold, 'network': inctrust_net}\n",
+    "    \n",
+    "        return incipient_trust_dict\n",
+    "            \n",
+    "            \n",
+    "            \n",
     "                    \n",
     "                            "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69c42d55-7c26-4818-bc07-5a3ab72386ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "411fccb7-60ea-4e14-a266-524e92e33e42",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8d08fa4-e1d2-4bd0-a1ac-eda1d7d86d2e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fed8d00-39ed-4577-a983-af3ffb129b6d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -233,59 +261,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reconstruct_incipiet_trust_to_telic(user_item_matrix, incipient_trust_dict):\n",
-    "    def calculate_trustees_precision(incipient_trust_dict, user_item_matrix):\n",
-    "        NumberUser, NumberItem = user_item_matrix.shape\n",
-    "        incipient_trust, inctrust_threshold = incipient_trust_dict['trust'], incipient_trust_dict['threshold']\n",
-    "        precision_val = np.zeros((NumberUser, NumberUser))\n",
-    "        \n",
-    "        for i in range(NumberUser):\n",
-    "            non_zero_ratings_i = user_item_matrix[i, user_item_matrix[i] != 0]\n",
-    "            avg_rating_i = np.mean(non_zero_ratings_i) if non_zero_ratings_i.size > 0 else 0\n",
+    "def prepare_evaluation_data(user_ids, user_item_df, incipient_trust_dict):\n",
+    "    def test_train_split(user_item_df, k_folds):\n",
+    "        kf = Kfold(n_split= k_folds, shuffle= True, random_state=42)\n",
+    "        for train_index, test_index in kf.split(user_item_df):\n",
+    "            train_indices, test_indices = train_index, test_index\n",
+    "            train_data, test_data = user_item_df.iloc[train_indices], user_item_df.iloc[test_indices]\n",
+    "        return train_data, test_data\n",
     "\n",
-    "            for j in range(NumberUser):\n",
-    "                if i != j and incipient_trust[i, j] >= inctrust_threshold[i]:\n",
-    "                    non_zero_ratings_j = user_item_matrix[j, user_item_matrix[j] != 0]\n",
-    "                    avg_rating_j = np.mean(non_zero_ratings_j) if non_zero_ratings_j.size > 0 else 0\n",
+    "    train_data, test_data = test_train_split(user_item_df, k_folds=5)\n",
+    "    trust_df = pd.DataFrame(index = user_ids, columns = user_ids, data=incipient_trust_dict['trust'])\n",
+    "    test_trustees = trust_df.loc[test_data.index][train_data.index]\n",
+    "    test_trustees = np.array(test_trustees)\n",
     "\n",
-    "                    common_items = np.where((user_item_matrix[i] != 0) & (user_item_matrix[j] != 0))[0]\n",
+    "    train_data = np.array(train_data)\n",
+    "    test_data =np.array(test_data)\n",
     "\n",
-    "                    if common_items.size > 0:\n",
-    "                        jth_trustee_prediction_impact = incipient_trust[i, j] * (user_item_matrix[j, common_items] - avg_rating_j)\n",
-    "                        common_items_rating_prediction = avg_rating_i + jth_trustee_prediction_impact\n",
-    "\n",
-    "                        errors = np.abs(common_items_rating_prediction - user_item_matrix[i, common_items])\n",
-    "                        fractions = np.maximum(np.abs(MaxRating - user_item_matrix[i, common_items]),\n",
-    "                                               np.abs(MinRating - user_item_matrix[i, common_items]))\n",
-    "                        precision_val[i, j] = np.sum(errors / fractions) / common_items.size\n",
-    "        \n",
-    "        positive_counts_per_row = np.sum(precision_val > 0, axis=0)\n",
-    "        precision_threshold = np.sum(precision_val, axis=0) / np.maximum(positive_counts_per_row, 1)\n",
-    "\n",
-    "        return precision_val, precision_threshold\n",
-    "    \n",
-    "   \n",
-    "    precision_val, precision_threshold = calculate_trustees_precision(incipient_trust_dict, user_item_matrix)\n",
-    "\n",
-    "    telic_trust_net = precision_val >= precision_threshold\n",
-    "    \n",
-    "    incipient_trust = incipient_trust_dict['trust']\n",
-    "\n",
-    "    with np.errstate(divide='ignore', invalid='ignore'):\n",
-    "        telic_trust = (incipient_trust * precision_val * 2) / (incipient_trust + precision_val)\n",
-    "        telic_trust[~np.isfinite(telic_trust)] = 0\n",
-    "\n",
-    "    positive_counts_per_row = np.sum(telic_trust > 0, axis=0)\n",
-    "    telictrust_threshold = np.sum(telic_trust, axis=0) / positive_counts_per_row\n",
-    "    \n",
-    "    telic_trust_dict = {'trust': telic_trust, 'threshold': telictrust_threshold, 'network': telic_trust_net}\n",
-    "    \n",
-    "    return telic_trust_dict"
+    "    return train_data, test_data, test_trustees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "31ae4b62-2f55-460b-b17c-5c5c73dfe101",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "ddb4d308-2aac-4f49-ab99-9fde2689e18f",
    "metadata": {},
    "outputs": [],
@@ -296,14 +304,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aa7d1637-8f18-48a4-abea-d149964054b8",
+   "metadata": {},
+   "source": [
+    "## Main Function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "b31cfe15-ae4c-4dd1-baf9-c13ca201e730",
    "metadata": {},
    "outputs": [],
    "source": [
     "def main():\n",
-    "    df = 1\n",
+    "    df = pd.read_csv(r'C:\\Users\\dagas\\OneDrive\\Desktop\\Dataset\\ratings.csv')\n",
     "    movie_ids= np.sort(df['movieID'].unique())\n",
     "    global user_ids\n",
     "    user_ids = np.sort(df['userID'].unique())\n",
@@ -317,13 +333,22 @@
     "    similarity_dict =calculate_similarity(user_item_matrix)\n",
     "    confidence_dict = calculate_confidence(user_item_matrix, similarity_dict)\n",
     "    identical_opinion_dict = calculate_identical_opinion(user_item_matrix, similarity_dict, confidence_dict)\n",
-    "    incipient_trust_dict = generate_incipient_trust(similarity_dict, confidence_dict, identical_opinion_dict)"
+    "    incipient_trust_dict = generate_incipient_trust(similarity_dict, confidence_dict, identical_opinion_dict)\n",
+    "    return user_item_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b2893348-d96b-40ae-b83a-cf782dfb4422",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0bca0ba-0844-4610-86f9-3cf84275dd4c",
    "metadata": {},
    "outputs": [],
    "source": []
